Fixes for images and spacing

--- a/src/components/card/_card.scss
+++ b/src/components/card/_card.scss
@@ -112,6 +112,10 @@
 
 .great-ds-card__icon {
     margin: $great-ds-spacing-6 0 0 $great-ds-spacing-6;
+
+    .great-ds-card--unmounted & {
+        margin: 0 $great-ds-spacing-4 0 0;
+    }
 }
 
 .great-ds-card__content {
